# CWork

./: CMakeLists.txt  Sentence.cpp  Sentence.h  Text.cpp  Text.h  Util.cpp  Util.h  Vector.cpp  Vector.h  main.cpp
basis/: DoubleLinkedList.cpp  DoubleLinkedList.h  SingleLinkedList.cpp  SingleLinkedList.h
